specs/kube-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kube-daemonset
spec:
  selector:
    matchLabels:
      app: ssd-monitor
  template:
    metadata:
      labels:
        app: ssd-monitor
    spec:
      nodeSelector:
        disk: ssd
      containers:
      - name: main
        image: prashant0701/kube
