specs/kube-manual-with-labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kube-manual-v2
  labels:
    creation_method: manual
    env: prod
spec:
  containers:
    - image: prashant0701/kube
      name: kube-container
      ports:
        - containerPort: 8080
          protocol: TCP
