specs/kube-manual-with-node-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kube-gpu
spec:
  nodeSelector:
    gpu: "true"
  containers:
    - image: prashant0701/kube
      name: kube-container
      ports:
        - containerPort: 8080
          protocol: TCP
