specs/kube-unhealthy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kube-liveness
spec:
  containers:
    - image: prashant0701/kube-unhealthy
      name: kube-container
      livenessProbe:
        httpGet:
          path: /
          port: 8080
        initialDelaySeconds: 15
      ports:
        - containerPort: 8080
          protocol: TCP
