specs/kube-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kube
