specs/kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: kube
