specs/kube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-ingress
spec:
  rules:
    - host: kube.example.com
      http:
        paths:
          - path: /greetings
            pathType: Prefix
            backend:
              service:
                name: kube-nodeport
                port:
                  number: 80
